# openai-c

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  performance-issue-report.md
.github/workflows/: build.yml
examples/: 02_image.c  03_audio.c  04_syscall.c  05_exec_guard.c  06_embeddings.c  chat.c
include/: openai.h
scripts/: install.sh
src/: audio.c  core.c  embeddings.c  image.c  openai.c
